--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 # 设置端口号
-server.port=443
-server.port.http=80
+server.port=80
 # 数据库配置
-spring.datasource.druid.url=jdbc:postgresql://db.ddvudo.top:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.druid.url=jdbc:postgresql://149.129.74.179:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.druid.driver-class-name=org.postgresql.Driver
 spring.datasource.druid.username=postgres
 spring.datasource.druid.password=liukang951006
@@ -23,7 +22,7 @@ server.error.include-stacktrace=always
 server.error.whitelabel.enabled=true
 # 日志级别
 logging.level.root=INFO
-logging.level.ORM.Mapper=DEBUG
+#logging.level.ORM.Mapper=DEBUG
 # 开启put和delete方法,源码在springboot2内置的WebMvcAutoConfiguration类中注册的hiddenHttpMethodFilter()方法
 spring.mvc.hiddenmethod.filter=true
 # 暴露所有actuator端点
@@ -40,12 +39,8 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=500MB
 #####################
-spring.redis.host=db.ddvudo.top
+spring.redis.host=149.129.74.179
 spring.redis.password=liukang951006
 #####################
 spring.session.timeout=3600
 spring.session.store-type=redis
-#####################
-server.ssl.enabled=true
-server.ssl.key-store=classpath:ddvudo.top.keystore
-server.ssl.key-store-password=123456
