--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,4 @@ spring.redis.password=liukang951006
 #####################
 spring.session.timeout=3600
 spring.session.store-type=redis
+file.tmp.location=./ncovData/
