--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # 设置端口号
-server.port=8080
+server.port=80
 # 数据库配置
 spring.datasource.druid.url=jdbc:postgresql://ddvudo.top:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.druid.driver-class-name=org.postgresql.Driver
@@ -36,6 +36,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=500MB
 #####################
+spring.redis.host=188.131.157.4
 spring.redis.port=6379
 spring.redis.password=liukang951006
 spring.redis.timeout=5000
@@ -43,3 +44,6 @@ spring.redis.timeout=5000
 spring.session.timeout=3600
 spring.session.store-type=redis
 file.tmp.location=./ncovData/
+# 日志级别
+logging.level.root=DEBUG
+#logging.level.ORM.Mapper=DEBUG
