--- a/src/main/resources/application-server.properties
+++ b/src/main/resources/application-server.properties
@@ -4,6 +4,7 @@ server.port=80
 spring.redis.host=localhost
 logging.level.root=INFO
 file.tmp.location=/var/lib/website
+spring.datasource.druid.url=jdbc:postgresql://localhost:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
 #server.ssl.enabled=true
 #server.ssl.key-store=classpath:ddvudo.top.keystore
 #server.ssl.key-store-password=123456
