--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,7 +42,7 @@ spring.redis.password=liukang951006
 #####################
 spring.session.timeout=3600
 spring.session.store-type=redis
-file.tmp.location=./ncovData/
+file.tmp.location=D://ncovData
 # 日志级别
 logging.level.root=INFO
 #logging.level.ORM.Mapper=DEBUG
