--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,7 +42,8 @@ spring.redis.password=liukang951006
 #####################
 spring.session.timeout=3600
 spring.session.store-type=redis
+server.servlet.session.timeout=600
 file.tmp.location=D://ncovData
 # 日志级别
 logging.level.root=INFO
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
