--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.druid.test-on-return=false
 spring.datasource.druid.initial-size=5
 mybatis.mapper-locations=classpath:ddvudo/ORM/Mapper/*.xml
 # 文件存储配置
-ddvudo.MinIO.endpoint=http://188.131.157.4:9000/
+ddvudo.MinIO.endpoint=http://149.129.74.179:9000/
 ddvudo.MinIO.accessKey=admin
 ddvudo.MinIO.secretKey=liukang951006
 # 错误页面
@@ -46,4 +46,4 @@ server.servlet.session.timeout=600
 file.tmp.location=D://ncovData
 # 日志级别
 logging.level.root=INFO
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
