--- a/WebSite-config/src/main/resources/bootstrap.yml
+++ b/WebSite-config/src/main/resources/bootstrap.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8001
+  port: 8003
 spring:
   cloud:
     config:
@@ -9,7 +9,7 @@ spring:
           default-label: master
           skip-ssl-validation: true
   application:
-    name: WebSite-config
+    name: website-config
 eureka:
   instance:
     preferIpAddress: true
