--- a/WebSite-lianjia/src/main/resources/bootstrap.yml
+++ b/WebSite-lianjia/src/main/resources/bootstrap.yml
@@ -1,3 +1,4 @@
+
 spring:
   application:
     name: lianjia
@@ -14,3 +15,5 @@ eureka:
     fetch-registry: true
     serviceUrl:
       defaultZone: http://localhost:8002/eureka/
+server:
+  port: 8004
