--- a/WebSite-web/src/main/resources/bootstrap.yml
+++ b/WebSite-web/src/main/resources/bootstrap.yml
@@ -12,3 +12,8 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8002/eureka/
+ribbon:
+  ReadTimeout: 60000
+  ConnectTimeout: 60000
+  eureka:
+    enable: true
